Code cleanup: deleted two files and merged their contents into video.css, consolidating video list and video player styles.

--- a/style/style.css
+++ b/style/style.css
@@ -9,8 +9,7 @@
 @import url('/style/basic/layout.css');
 
 /* COMPONENTS */
-@import url('/style/components.css/video-list.css');
-@import url('/style/components.css/video-player.css');
+@import url('/style/components.css/video.css');
 @import url('/style/components.css/search-bar.css');
 @import url('/style/components.css/wiki-info.css');
 @import url('/style/components.css/main-header.css');
