--- a/style/components.css/search-bar.css
+++ b/style/components.css/search-bar.css
@@ -1,14 +1,23 @@
 .search-bar {
     grid-column: 2;
+
     width: 95%;
-    height: 3em;
+    max-height: 3em;
 
+    padding: 1rem;
 
-    padding: .5em;
+    align-self: center;
     align-content: center;
 
+    font-size: 1.25em;
+    color: var(--clr-primary-base);
+
     border-radius: 2vh;
-    background-color: var(--clr-third--1);
+    background-color: var(--clr-sec--1);
     border: 1px black solid;
 }
 
+
+.search-bar input {
+    margin-inline-start: 1em;
+}
