--- a/style/components.css/video.css
+++ b/style/components.css/video.css
@@ -13,32 +13,40 @@
 
 .video-card {
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: minmax(30px, 60%) 40%;
 
-    gap: .25em;
+    /* align-items: center; */
+    /* prevents grid rows from stretching */
+    /* justify-items: start; */
+    place-items: center;
+
+    gap: 1em;
     padding: .5em;
 
     border-radius: 2vh;
     border: 1px black solid;
+    background-color: var(--clr-primary--2);
 }
 
 .video-card figure {
     grid-column: 2;
-    grid-row: 1/3;
-    justify-self: center;
-    align-self: center;
+    grid-row: 1/4;
 }
 
-figure img{
+figure img {
     width: 100%;
-}
-
-.video-card p {
-    grid-column: 1;
 }
 
 .video-info {
     grid-column: 1;
+    grid-row: 1/3;
+}
+
+.video-card p {
+    grid-column: 1;
+    grid-row: 3;
+    width: 100%;
+    overflow: hidden;
 }
 
 .video-info h4 {
@@ -49,7 +57,7 @@ figure img{
     grid-column: 2;
     width: 100%;
     min-height: 400px;
-    
+
     border-radius: 2vh;
     border: 1px black solid;
 }
