--- a/style/components.css/footer.css
+++ b/style/components.css/footer.css
@@ -10,11 +10,17 @@ footer {
     width: 100%;
     height: 2em;
 
-    font-family: 'Rubik_Doodle_Shadow';
+    font-family: 'fredoka';
     font-weight: bold;
 
     color: var(--clr-primary-base);
-    border-radius:  0 0 2vh 2vh;
+    border-radius: 0 0 2vh 2vh;
 
     background-color: var(--clr-sec-1);
+}
+
+.clear-storage {
+    margin-inline-start: 1em;
+    border: 1px black dotted;
+    background-color: var(--clr-sec-base);
 }
