Created modal in HTML for clear history, implemented full open/close functionality, and added corresponding styles.

--- a/style/style.css
+++ b/style/style.css
@@ -15,6 +15,7 @@
 @import url('./components.css/search-bar.css');
 @import url('./components.css/wiki-info.css');
 @import url('./components.css/main-header.css');
+@import url('./components.css/modal.css');
 @import url('./components.css/footer.css');
 
 /* MQ */
