--- a/style/components.css/main-header.css
+++ b/style/components.css/main-header.css
@@ -1,6 +1,6 @@
 .main-header {
-
-    margin-block:20px;
+    display: flex;
+    margin-block: 20px;
 
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.4);
     text-transform: uppercase;
@@ -10,4 +10,12 @@
 
     color: var(--clr-white-base);
     letter-spacing: 10px;
+}
+
+.Change-theme {
+    font-family: 'fredoka';
+
+    align-self: center;
+    
+    font-size: .5em;
 }
