--- a/style/setup/vars.css
+++ b/style/setup/vars.css
@@ -26,7 +26,7 @@
     --clr-white-base: #f2f5fa;
 
     /* Generale component styling */
-
+        --clr-background-base: #353535;
     /* Break Pointes  */
     /* --L: 1000px;
     --M: 900px;
