--- a/style/basic/basic.css
+++ b/style/basic/basic.css
@@ -5,14 +5,19 @@
 }
 
 html {
-    margin: .5em;
+    display: grid;
+    height: 100%;
+
+    margin: 1em;
 
     font-family: 'fredoka';
+    align-content: center;
 
     color: var(--clr-white-base);
     background: var(--clr-primary-base);
 }
 
+body {}
 
 h2 {
     grid-column: 1/-1;
