--- a/style/basic/basic.css
+++ b/style/basic/basic.css
@@ -6,7 +6,7 @@
 
 html {
     display: grid;
-    height: 100%;
+    /* height: 90%; */
 
     margin: 1em;
 
@@ -17,16 +17,12 @@ html {
     background: var(--clr-primary-base);
 }
 
-body {}
-
 h2 {
     grid-column: 1/-1;
 }
 
-video {
-    grid-column: -1;
-}
 
 button {
     cursor: pointer;
 }
+
