--- a/style/components.css/video.css
+++ b/style/components.css/video.css
@@ -27,7 +27,6 @@
     grid-column: 2;
     grid-row: 1/4;
     max-width: 320px;
-    /* min-height: 180px; */
 }
 
 figure img {
@@ -50,10 +49,11 @@ figure img {
 }
 
 .video-player {
-    /* grid-column: 1; */
     grid-row: 2;
     min-width: 580px;
     min-height: 400px;
+
+    align-self: center;
 
     border-radius: 2vh;
     border: 1px black solid;
