--- a/style/components.css/footer.css
+++ b/style/components.css/footer.css
@@ -22,7 +22,7 @@ footer {
     background-color: var(--clr-sec-1);
 }
 
-.clear-storage {
+.clear-storage-btn {
     margin-inline-start: 1em;
     border: 1px black dotted;
     background-color: var(--clr-sec-base);
